feat: agregar funcionalidad de detalle de ventas con visualización de información y métodos de pago

--- a/src/app/pages/panel/panel-list/panel-list.component.html
+++ b/src/app/pages/panel/panel-list/panel-list.component.html
@@ -58,7 +58,7 @@
           }@else{
           <c-widget-stat-c
             [title]="'Facturación'"
-            color="success"
+            color="danger"
             inverse
             value="{{ sumaFacturacion() | currency : 'ARS' }}"
           >
