feat: actualizar gestión de gastos y métodos de pago en formularios y modales

--- a/src/app/pages/gasto/gasto-listado/gasto-listado.component.html
+++ b/src/app/pages/gasto/gasto-listado/gasto-listado.component.html
@@ -100,7 +100,7 @@
                 </td>
                 <td>
                   <span>{{
-                    sumarGastoDetalle(gasto.gasto_detalle) | currency : "ARS"
+                    sumarGastoDetalle(gasto.metodo_pago) | currency : "ARS"
                   }}</span>
                 </td>
                 <td>
