feat: agregar filtros de fecha de inicio y fin en el formulario de filtros

--- a/src/app/pages/panel/panel-list/panel-list.component.html
+++ b/src/app/pages/panel/panel-list/panel-list.component.html
@@ -294,9 +294,10 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
       [showValidDates]="false"
+      [showDateIniFin]="true"
       [fechaFilter]="ParametrosURL"
+      [limpiarTipo]="'dia-actual'"
     />
   </c-modal-body>
 </c-modal>
