--- a/src/app/shared/components/forms/filtros-list-form/filtros-list-form.component.html
+++ b/src/app/shared/components/forms/filtros-list-form/filtros-list-form.component.html
@@ -73,6 +73,21 @@
             />
           </div>
         </c-col>
+        } @if(showDateIniFin && !filtro.allDates){
+        <c-col [md]="6">
+          <app-input-single-date
+            [selectedDate]="filtro.fecha.startDate"
+            [textLabel]="'Fecha inicio'"
+            (selectedDateChange)="handleDateInicioFin($event, 'inicio')"
+          />
+        </c-col>
+        <c-col [md]="6">
+          <app-input-single-date
+            [selectedDate]="filtro.fecha.endDate"
+            [textLabel]="'Fecha fin'"
+            (selectedDateChange)="handleDateInicioFin($event, 'fin')"
+          />
+        </c-col>
         } @if(showLocales){
         <c-col [md]="6">
           <div class="mb-3">
