feat: actualizar formularios de filtros para incluir rango de fechas y mejorar la gestión de datos

--- a/src/app/pages/cliente/cliente-listado/cliente-listado.component.html
+++ b/src/app/pages/cliente/cliente-listado/cliente-listado.component.html
@@ -182,6 +182,7 @@
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
       [showDateIniFin]="true"
+      [limpiarTipo]="'mes-actual'"
       [showEstado]="true"
       [showValidDates]="true"
       [validDateValue]="ParametrosURL.allDates"
