--- a/src/app/pages/nomina/nomina-listado/nomina-listado.component.html
+++ b/src/app/pages/nomina/nomina-listado/nomina-listado.component.html
@@ -204,7 +204,7 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
+      [showDateIniFin]="true"
       [showEstado]="true"
       [showValidDates]="true"
       [showEmpleados]="true"
