--- a/src/app/pages/configuracion/saldo/saldo-list/saldo-list.component.html
+++ b/src/app/pages/configuracion/saldo/saldo-list/saldo-list.component.html
@@ -184,9 +184,10 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
+      [showDateIniFin]="true"
       [showEstado]="true"
       [showValidDates]="true"
+      [validDateValue]="ParametrosURL.allDates"
     />
   </c-modal-body>
 </c-modal>
