--- a/src/app/pages/configuracion/servicios/servicio-listado/servicio-listado.component.html
+++ b/src/app/pages/configuracion/servicios/servicio-listado/servicio-listado.component.html
@@ -188,9 +188,10 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
+      [showDateIniFin]="true"
       [showEstado]="true"
       [showValidDates]="true"
+      [validDateValue]="ParametrosURL.allDates"
     />
   </c-modal-body>
 </c-modal>
