--- a/src/app/pages/configuracion/tipo-gasto/tipo-gasto-listado/tipo-gasto-listado.component.html
+++ b/src/app/pages/configuracion/tipo-gasto/tipo-gasto-listado/tipo-gasto-listado.component.html
@@ -180,7 +180,7 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
+      [showDateIniFin]="true"
       [showEstado]="true"
     />
   </c-modal-body>
