--- a/src/app/pages/empleado/empleado-listado/empleado-listado.component.html
+++ b/src/app/pages/empleado/empleado-listado/empleado-listado.component.html
@@ -181,9 +181,9 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
       [showEstado]="true"
       [showValidDates]="true"
+      [showDateIniFin]="true"
     />
   </c-modal-body>
 </c-modal>
