--- a/src/app/pages/factura/factura-listado/factura-listado.component.html
+++ b/src/app/pages/factura/factura-listado/factura-listado.component.html
@@ -203,7 +203,7 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
+      [showDateIniFin]="true"
       [showEstado]="false"
       [showValidDates]="true"
     />
