--- a/src/app/pages/gasto/gasto-listado/gasto-listado.component.html
+++ b/src/app/pages/gasto/gasto-listado/gasto-listado.component.html
@@ -206,7 +206,7 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
+      [showDateIniFin]="true"
       [showEstado]="true"
       [showValidDates]="true"
       [showEmpleados]="true"
