--- a/src/app/pages/local/local-listado/local-listado.component.html
+++ b/src/app/pages/local/local-listado/local-listado.component.html
@@ -175,9 +175,9 @@
   <c-modal-body>
     <app-filtros-list-form
       (filtrar)="filtroEvent($event)"
-      [showDate]="true"
       [showEstado]="true"
       [showValidDates]="true"
+      [validDateValue]="ParametrosURL.allDates"
     />
   </c-modal-body>
 </c-modal>
