feat: agregar soporte para tipos de gasto en filtros y formularios

--- a/src/app/pages/gasto/gasto-listado/gasto-listado.component.html
+++ b/src/app/pages/gasto/gasto-listado/gasto-listado.component.html
@@ -211,6 +211,7 @@
       [showValidDates]="true"
       [showEmpleados]="true"
       [showUsers]="true"
+      [showTiposGastos]="true"
     />
   </c-modal-body>
 </c-modal>
