feat: agregar formato de moneda en formularios y componentes de venta

--- a/src/app/pages/configuracion/servicios/servicio-listado/servicio-listado.component.html
+++ b/src/app/pages/configuracion/servicios/servicio-listado/servicio-listado.component.html
@@ -91,10 +91,10 @@
                   <span>{{ Servicio.descripcion }}</span>
                 </td>
                 <td>
-                  <span>{{ Servicio.precio }}</span>
+                  <span>{{ Servicio.precio | currency : "ARS" }}</span>
                 </td>
                 <td>
-                  <span>{{ Servicio.precio_nomina }}</span>
+                  <span>{{ Servicio.precio_nomina | currency : "ARS" }}</span>
                 </td>
                 <td>
                   <div class="d-flex flex-direction">
