--- a/src/app/pages/ventas-productos/ventas-productos-listado/ventas-productos-listado.component.html
+++ b/src/app/pages/ventas-productos/ventas-productos-listado/ventas-productos-listado.component.html
@@ -92,7 +92,9 @@
                   >
                 </td>
                 <td>
-                  <span>{{ venta.total }}</span>
+                  <span>{{
+                    venta.metodo_pago_sum_monto | currency : "ARS"
+                  }}</span>
                 </td>
                 <td>
                   <span>{{ venta.created_at | date : "dd-MM-YYYY" }}</span>
