--- a/src/app/shared/components/forms/saldo-crud-form/saldo-crud-form.component.html
+++ b/src/app/shared/components/forms/saldo-crud-form/saldo-crud-form.component.html
@@ -8,7 +8,7 @@
           formControlName="monto"
           type="text"
           placeholder="Monto"
-          appOnlyNumberAndPoint
+          appCurrencyFormat
           [ngClass]="{
             'is-invalid':
               getControl('monto').invalid && getControl('monto').touched,
