--- a/src/app/shared/components/forms/ventas-productos-crud-form/ventas-productos-crud-form.component.html
+++ b/src/app/shared/components/forms/ventas-productos-crud-form/ventas-productos-crud-form.component.html
@@ -124,6 +124,7 @@
               formControlName="precio_unitario"
               type="text"
               placeholder="Precio Unitario"
+              appCurrencyFormat
             />
             <label cLabel for="precio_unitario_{{ i }}">Precio Unitario</label>
           </div>
@@ -140,6 +141,7 @@
               formControlName="precio"
               type="text"
               placeholder="precio"
+              appCurrencyFormat
             />
             <label cLabel for="precio_{{ i }}">Total</label>
           </div>
@@ -217,7 +219,7 @@
               formControlName="monto"
               type="text"
               placeholder="monto"
-              appOnlyNumberAndPoint
+              appCurrencyFormat
             />
             <label cLabel for="monto_{{ m }}">Monto</label>
           </div>
