--- a/src/app/shared/components/forms/gasto-crud-form/gasto-crud-form.component.html
+++ b/src/app/shared/components/forms/gasto-crud-form/gasto-crud-form.component.html
@@ -258,6 +258,7 @@
                   formControlName="precio_unitario"
                   type="text"
                   placeholder="Precio Unitario"
+                  appCurrencyFormat
                 />
                 <label cLabel for="precio_unitario_{{ i }}"
                   >Precio Unitario</label
@@ -276,6 +277,7 @@
                   formControlName="precio"
                   type="text"
                   placeholder="precio"
+                  appCurrencyFormat
                 />
                 <label cLabel for="precio_{{ i }}">Total</label>
               </div>
@@ -376,7 +378,7 @@
               formControlName="monto"
               type="text"
               placeholder="Cantidad"
-              appOnlyNumbers
+              appCurrencyFormat
             />
             <label cLabel for="monto_{{ j }}">Monto</label>
           </div>
