--- a/src/app/pages/panel/panel-list/panel-list.component.html
+++ b/src/app/pages/panel/panel-list/panel-list.component.html
@@ -121,6 +121,31 @@
 
           }
         </c-col>
+        <c-col
+          xl="3"
+          lg="4"
+          sm="6"
+          class=""
+          [ngClass]="{
+            'align-items-center justify-content-center d-flex': loaderPanel
+          }"
+        >
+          @if(loaderPanel){
+          <c-spinner aria-hidden="true" size="sm" variant="grow" />
+          }@else{
+          <c-widget-stat-c
+            [title]="'Caja Mercado Pago Gimtad'"
+            color="success"
+            inverse
+            value="{{ sumaMetodosPago(3) | currency : 'ARS' }}"
+          >
+            <ng-template cTemplateId="widgetIconTemplate">
+              <svg cIcon height="36" name="faFileInvoiceDollar"></svg>
+            </ng-template>
+          </c-widget-stat-c>
+
+          }
+        </c-col>
         <!-- <c-col
           xl="3"
           lg="4"
